View Issue Details

IDProjectCategoryView StatusLast Update
0022632CommunityOCCT:Visualizationpublic2016-04-20 15:48
ReportersanAssigned Tobugmaster  
PrioritylowSeverityfeature 
Status closedResolutionfixed 
OSAll 
Target Version7.0.0Fixed in Version7.0.0 
Summary0022632: Visualization - provide logarithmic scale for Aspect_ColorScale class
DescriptionThis message was sent from www.opencascade.org forum user Dennis G.
<dennis.grosse@kit.edu>
http://www.opencascade.org/org/forum/thread_21025/
------------------------------------------------------


Hello Folks,

I need a logarithmic color scale. Is there a way to tell Aspect_ColorScale to
use logarithmic intervalls?

Thanks,

Dennis
Steps To Reproducetest bugs vis bug22632
TagsNo tags attached.
Test case numberbugs vis bug22632

Activities

git

2015-10-07 15:17

administrator   ~0046564

Branch CR22632 has been created by isz.

SHA-1: a7873e889405e222d8d27406fda49bc1ff00fa82


Detailed log of new commits:

Author: isz
Date: Wed Oct 7 15:17:33 2015 +0300

    0022632: Visualization - provide logarithmic scale for Aspect_ColorScale class
    
    Option "-logarithmic" is provided for draw command vcolorscale, which fills color scale's labels with logarithmic values due to the min and max range and the number of intervals of the color scale. New test case added. Fixed error when command vcolorscale was called without arguements.

git

2015-10-08 10:25

administrator   ~0046582

Branch CR22632 has been updated forcibly by isz.

SHA-1: 03fe4dd491a9d7eaa9a2c2075d7e575efce4a25a

isz

2015-10-08 10:47

developer   ~0046583

Dear Kirill,
Please review branch CR22632.

git

2015-10-08 12:33

administrator   ~0046587

Branch CR22632 has been updated forcibly by isz.

SHA-1: d2a4e6be422738a7ee1fdbdd077881c04df1ca68

kgv

2015-10-08 13:43

developer   ~0046594

Please test the patch.

git

2015-10-08 17:31

administrator   ~0046604

Branch CR22632 has been updated forcibly by mkv.

SHA-1: 66d423f74f34a8cb62db657a726927d4a3375f87

mkv

2015-10-09 20:12

tester   ~0046641

Dear BugMaster,
Branch CR22632 was rebased on branch IR-2015-10-08 of occt git-repository.
SHA-1: 66d423f74f34a8cb62db657a726927d4a3375f87

mkv

2015-10-09 20:12

tester   ~0046642

Last edited: 2015-10-09 20:13

Dear BugMaster,
Branch CR22632 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 66d423f74f34a8cb62db657a726927d4a3375f87

Number of compiler warnings:

occt component :
Linux: 13 (13 on master)
Windows: 0 (0 on master)

products component :
Linux: 39 (39 on master)
Windows: 0 (0 on master)

Regressions/Differences/Improvements:
No regressions/differences

Testing cases:
http://occt-tests/CR22632-master-occt-64/Debian70-64/bugs/vis/bug22632.html
http://occt-tests/CR22632-master-occt-64/Windows-64-VC10/bugs/vis/bug22632.html
bugs vis bug22632: OK

Testing on Linux:
occt component :
Total MEMORY difference: 92842938 / 92509044 [+0.36%]
Total CPU difference: 19564.41999999975 / 19399.130000000052 [+0.85%]
products component :
Total MEMORY difference: 26299545 / 26331029 [-0.12%]
Total CPU difference: 7677.01999999997 / 7325.130000000003 [+4.80%]

Testing on Windows:
occt component :
Total MEMORY difference: 58073618 / 58094267 [-0.04%]
Total CPU difference: 19145.14472449892 / 18013.2014684989 [+6.28%]
products component :
Total MEMORY difference: 17175671 / 17180918 [-0.03%]
Total CPU difference: 6066.55128790002 / 5632.02610249997 [+7.72%]

There are no differences in images found by testdiff.

mkv

2015-10-09 20:12

tester   ~0046643

Dear BugMaster,
Branch CR22632 is TESTED.

git

2015-10-16 16:17

administrator   ~0046892

Branch CR22632 has been deleted by kgv.

SHA-1: 66d423f74f34a8cb62db657a726927d4a3375f87

Related Changesets

occt: master 24a88697

2015-10-08 09:07:59

isz


Committer: bugmaster Details Diff
0022632: Visualization - provide logarithmic scale for Aspect_ColorScale class

Option "-logarithmic" is provided for draw command vcolorscale.
It changes color scale's labels to logarithmic values due to the min and max range and the number of intervals of the color scale.
New test case added. Fixed error when command vcolorscale was called without arguments.
Affected Issues
0022632
mod - src/AIS/AIS_ColorScale.cxx Diff File
mod - src/AIS/AIS_ColorScale.hxx Diff File
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx Diff File
add - tests/bugs/vis/bug22632 Diff File

Issue History

Date Modified Username Field Change
2011-08-02 11:24 bugmaster Category OCCT:VIZ => OCCT:Visualization
2011-10-21 16:33 bugmaster Assigned To bugmaster => san
2011-10-21 16:33 bugmaster Status acknowledged => assigned
2011-10-21 16:33 bugmaster Resolution suspended => open
2011-10-21 16:33 bugmaster Fixed in Version EMPTY =>
2011-10-21 16:33 bugmaster Description Updated
2011-11-25 12:28 szy Summary Logariphmic scale for Aspect_ColorScale class => Logarithmic scale for Aspect_ColorScale class
2014-02-17 14:36 kgv Priority normal => low
2014-09-11 18:47 abv Target Version => 7.1.0
2014-11-12 08:24 kgv Summary Logarithmic scale for Aspect_ColorScale class => Visualization - provide logarithmic scale for Aspect_ColorScale class
2015-08-20 14:17 kgv Assigned To san => isz
2015-10-07 15:17 git Note Added: 0046564
2015-10-08 10:25 git Note Added: 0046582
2015-10-08 10:47 isz Note Added: 0046583
2015-10-08 10:47 isz Assigned To isz => kgv
2015-10-08 10:47 isz Status assigned => resolved
2015-10-08 10:47 isz Steps to Reproduce Updated
2015-10-08 12:33 git Note Added: 0046587
2015-10-08 13:43 kgv Note Added: 0046594
2015-10-08 13:43 kgv Assigned To kgv => bugmaster
2015-10-08 13:43 kgv Status resolved => reviewed
2015-10-08 13:43 kgv Target Version 7.1.0 => 7.0.0
2015-10-08 14:02 apv Assigned To bugmaster => apv
2015-10-08 17:31 git Note Added: 0046604
2015-10-08 18:58 mkv Assigned To apv => mkv
2015-10-09 20:12 mkv Note Added: 0046641
2015-10-09 20:12 mkv Note Added: 0046642
2015-10-09 20:12 mkv Note Added: 0046643
2015-10-09 20:12 mkv Assigned To mkv => bugmaster
2015-10-09 20:12 mkv Status reviewed => tested
2015-10-09 20:13 mkv Test case number => bugs vis bug22632
2015-10-09 20:13 mkv Note Edited: 0046642
2015-10-16 13:18 bugmaster Changeset attached => occt master 24a88697
2015-10-16 13:18 bugmaster Status tested => verified
2015-10-16 13:18 bugmaster Resolution open => fixed
2015-10-16 16:17 git Note Added: 0046892
2016-04-20 15:44 aiv Fixed in Version => 7.0.0
2016-04-20 15:48 aiv Status verified => closed