src/AIS/AIS_ColorScale.hxx
@@ -94,6 +94,9 @@ public:
   //! Returns true if the labels placed at border of color filled rectangles.
   Standard_EXPORT Standard_Boolean IsLabelAtBorder() const { return myAtBorder; }
 
+  //! Returns true if the color scale has logarithmic intervals
+  Standard_Boolean IsLogarithmic() const { return myIsLogarithmic; }
+
   //! Sets the minimal value of color scale.
   Standard_EXPORT void SetMin (const Standard_Real theMin);
 
@@ -145,6 +148,9 @@ public:
 
   //! Sets true if the labels placed at border of color filled rectangles.
   Standard_EXPORT void SetLabelAtBorder (const Standard_Boolean theOn);
+
+  //! Sets true if the color scale has logarithmic intervals.
+  void SetLogarithmic (const Standard_Boolean isLogarithmic) { myIsLogarithmic = isLogarithmic; };
 
   //! Returns the size of color scale.
   Standard_EXPORT void GetSize (Standard_Integer& theWidth, Standard_Integer& theHeight) const;
@@ -248,13 +254,16 @@ private:
   TCollection_AsciiString Format() const;
 
   //! Returns the value of given interval.
-  Standard_Real GetNumber (const Standard_Integer anIndex) const;
+  Standard_Real GetNumber (const Standard_Integer theIndex) const;
+
+  //! Returns the value of given logarithmic interval.
+  Standard_Real GetLogNumber (const Standard_Integer theIndex) const;
 
   //! Returns the color's hue for the given value in the given interval.
   //! @param theValue [in] the current value of interval.
   //! @param theMin [in] the min value of interval.
   //! @param theMax [in] the max value of interval.
-  static Standard_Integer HueFromValue (const Standard_Integer aValue, const Standard_Integer aMin, const Standard_Integer aMax);
+  static Standard_Integer HueFromValue (const Standard_Integer theValue, const Standard_Integer theMin, const Standard_Integer theMax);
 
 private:
 
@@ -267,6 +276,7 @@ private:
   Aspect_TypeOfColorScaleData myLabelType;
   Standard_Boolean myAtBorder;
   Standard_Boolean myReversed;
+  Standard_Boolean myIsLogarithmic;
   Aspect_SequenceOfColor myColors;
   TColStd_SequenceOfExtendedString myLabels;
   Aspect_TypeOfColorScalePosition myLabelPos;
